Some developer happiness: npm start
starts a little express server with livereload and gulp watchers that recompile
sass

also added eslint for javascript syntax checks

--- a/index.html
+++ b/index.html
@@ -321,6 +321,13 @@
       </footer>
     </main>
 
+    <script>
+      // poor man's development flag
+      if (window.location.hostname === 'localhost') {
+        document.write('<script src="http://localhost:35729/livereload.js"><\/script>');
+      }
+    </script>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="assets/components/jquery.js"><\/script>');</script>
     <script src="assets/js/scripts.min.js"></script>
