Add project meta list underneath description

--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,10 @@
 								<div class="project-card-body">
 									<h4>Project Name</h4>
 									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
+									<ul class="list-inline project-tech-stack">
+										<li class="text-muted">Rails</li>
+										<li class="text-muted">Angular</li>
+									</ul>
 								</div>
 								<hr class="hr-decorative">
 								<div class="project-card-footer text-right">
@@ -86,6 +90,10 @@
 								<div class="project-card-body">
 									<h4>Project Name</h4>
 									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
+									<ul class="list-inline project-tech-stack">
+										<li class="text-muted">Rails</li>
+										<li class="text-muted">Angular</li>
+									</ul>
 								</div>
 								<hr class="hr-decorative">
 								<div class="project-card-footer text-right">
@@ -110,80 +118,10 @@
 								<div class="project-card-body">
 									<h4>Project Name</h4>
 									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
-								</div>
-								<hr class="hr-decorative">
-								<div class="project-card-footer text-right">
-									<ul class="project-card-link-list list-inline">
-										<li>
-											<a href="#">
-												<i class="fa fa-lg fa-share"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<i class="fa fa-lg fa-github"></i>
-											</a>
-										</li>
+									<ul class="list-inline project-tech-stack">
+										<li class="text-muted">Rails</li>
+										<li class="text-muted">Angular</li>
 									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-4">
-							<div class="card project-card">
-								<figure class="project-card-image"></figure>
-								<div class="project-card-body">
-									<h4>Project Name</h4>
-									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
-								</div>
-								<hr class="hr-decorative">
-								<div class="project-card-footer text-right">
-									<ul class="project-card-link-list list-inline">
-										<li>
-											<a href="#">
-												<i class="fa fa-lg fa-share"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<i class="fa fa-lg fa-github"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="card project-card">
-								<figure class="project-card-image"></figure>
-								<div class="project-card-body">
-									<h4>Project Name</h4>
-									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
-								</div>
-								<hr class="hr-decorative">
-								<div class="project-card-footer text-right">
-									<ul class="project-card-link-list list-inline">
-										<li>
-											<a href="#">
-												<i class="fa fa-lg fa-share"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#">
-												<i class="fa fa-lg fa-github"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="card project-card">
-								<figure class="project-card-image"></figure>
-								<div class="project-card-body">
-									<h4>Project Name</h4>
-									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
 								</div>
 								<hr class="hr-decorative">
 								<div class="project-card-footer text-right">
@@ -210,6 +148,10 @@
 								<div class="project-card-body">
 									<h4>Project Name</h4>
 									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
+									<ul class="list-inline project-tech-stack">
+										<li class="text-muted">Rails</li>
+										<li class="text-muted">Angular</li>
+									</ul>
 								</div>
 								<hr class="hr-decorative">
 								<div class="project-card-footer text-right">
@@ -234,6 +176,10 @@
 								<div class="project-card-body">
 									<h4>Project Name</h4>
 									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
+									<ul class="list-inline project-tech-stack">
+										<li class="text-muted">Rails</li>
+										<li class="text-muted">Angular</li>
+									</ul>
 								</div>
 								<hr class="hr-decorative">
 								<div class="project-card-footer text-right">
@@ -258,6 +204,96 @@
 								<div class="project-card-body">
 									<h4>Project Name</h4>
 									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
+									<ul class="list-inline project-tech-stack">
+										<li class="text-muted">Rails</li>
+										<li class="text-muted">Angular</li>
+									</ul>
+								</div>
+								<hr class="hr-decorative">
+								<div class="project-card-footer text-right">
+									<ul class="project-card-link-list list-inline">
+										<li>
+											<a href="#">
+												<i class="fa fa-lg fa-share"></i>
+											</a>
+										</li>
+										<li>
+											<a href="#">
+												<i class="fa fa-lg fa-github"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-4">
+							<div class="card project-card">
+								<figure class="project-card-image"></figure>
+								<div class="project-card-body">
+									<h4>Project Name</h4>
+									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
+									<ul class="list-inline project-tech-stack">
+										<li class="text-muted">Rails</li>
+										<li class="text-muted">Angular</li>
+									</ul>
+								</div>
+								<hr class="hr-decorative">
+								<div class="project-card-footer text-right">
+									<ul class="project-card-link-list list-inline">
+										<li>
+											<a href="#">
+												<i class="fa fa-lg fa-share"></i>
+											</a>
+										</li>
+										<li>
+											<a href="#">
+												<i class="fa fa-lg fa-github"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="card project-card">
+								<figure class="project-card-image"></figure>
+								<div class="project-card-body">
+									<h4>Project Name</h4>
+									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
+									<ul class="list-inline project-tech-stack">
+										<li class="text-muted">Rails</li>
+										<li class="text-muted">Angular</li>
+									</ul>
+								</div>
+								<hr class="hr-decorative">
+								<div class="project-card-footer text-right">
+									<ul class="project-card-link-list list-inline">
+										<li>
+											<a href="#">
+												<i class="fa fa-lg fa-share"></i>
+											</a>
+										</li>
+										<li>
+											<a href="#">
+												<i class="fa fa-lg fa-github"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="card project-card">
+								<figure class="project-card-image"></figure>
+								<div class="project-card-body">
+									<h4>Project Name</h4>
+									<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, beatae dignissimos necessitatibus doloremque.</p>
+									<ul class="list-inline project-tech-stack">
+										<li class="text-muted">Rails</li>
+										<li class="text-muted">Angular</li>
+									</ul>
 								</div>
 								<hr class="hr-decorative">
 								<div class="project-card-footer text-right">
