Added projects section to FAQ

--- a/index.html
+++ b/index.html
@@ -90,6 +90,29 @@
                 </p>
 
                 <p>
+                <strong><a id="whatbuilt" href="#whatbuilt">Q:</a>What projects has DevProgress built? What projects will you build in the future?</strong>
+                </p>
+
+                <p>
+                A: We're proud of the work our volunteers have accomplished since our formation just a few short months ago. For a listing of our <em>live</em> and <em>in progress</em> projects, check out <a target="_blank" href="https://devprogress.us/projects">our official projects gallery.</a>
+
+                <p>
+                As far as what we're building during the last weeks of the campaign, DevProgress volunteers are encouraged to work within six key challenge areas:
+                <ul>
+                    <li>Register more voters</li>
+                    <li>Improve early voter turnout</li>
+                    <li>Improve election day turnout</li>
+                    <li>Recruit more field and phone volunteers</li>
+                    <li>Drive more donations</li>
+                    <li>Amplify campaign messaging</li>
+                </ul>
+                </p>
+
+                <p>
+                If you have an idea for a project that helps address one or more of these challenges, then be sure to submit a card to our <a target="_blank" href="https://trello.com/b/52qk9nGO/devprogress-ideas">community ideas trello board</a> ASAP!
+                <p>
+
+                <p>
                 <strong><a id="howhfa" href="#howhfa">Q:</a> How does DevProgress work with Progressive Campaigns?</strong>
                 </p>
 
