--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:url" content="https://devprogress.us/" />
     <meta property="og:title" content="DevProgress" />
-    <meta property="og:description" content="We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each project we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!" />
+<meta property="og:description" content="We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each proeject we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!" />
     <meta property="og:image" content="https://devprogress.us/assets/img/dev-progress-logo.svg" />
 
     <link href="https://www.google-analytics.com/" rel="dns-prefetch">
@@ -39,7 +39,7 @@
               <div class="col-sm-12 col-md-10 col-lg-10">
                 <img class="img-responsive logo" src="assets/img/dev-progress-logo.svg" alt="">
                 <hr>
-                <p class="lead callout">We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each project we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!</p>
+                <p class="lead callout">We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each <a target="_blank" href="https://devprogress.us/projects">project</a> we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!</p>
                 <a target="_blank" href="https://docs.google.com/forms/d/1hSTdTHRQt4Xu8n2JV8hXkyjeii7I0DVxgyb8520lwEg/viewform?c=0&w=1" class="btn btn-danger btn-material text-center">Get Involved</a>
               </div>
             </div>
