Typos fix -- shoutout @carriebarnes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </p>
 
                 <p>
-                A: DevProgress is a group of volunteers who work together, and self-organize to work on projects that we feel with help elect more Democratic and progressive candidates. We provide a space for community organizing for our volunteers, for brainstorming, hashing out plans, taking on tasks, and getting stuff done.
+                A: DevProgress is a group of volunteers who work together, and self-organize to work on projects that we feel will help elect more Democratic and progressive candidates. We provide a space for community organizing for our volunteers, for brainstorming, hashing out plans, taking on tasks, and getting stuff done.
                 </p>
 
                 <p>
