Typo fix: s/proeject/project/

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:url" content="https://devprogress.us/" />
     <meta property="og:title" content="DevProgress" />
-<meta property="og:description" content="We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each proeject we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!" />
+<meta property="og:description" content="We are volunteers using our skills and expertise to create tech tools to help elect Hillary Clinton and other Democratic and progressive candidates. We are coders, designers, leaders, writers, mentors, and researchers. Each project we work on focuses on an app, service, data resource, or other technology to advance the cause. We are a team — join us!" />
     <meta property="og:image" content="https://devprogress.us/assets/img/dev-progress-logo.svg" />
 
     <link href="https://www.google-analytics.com/" rel="dns-prefetch">
